--- a/style.css
+++ b/style.css
@@ -117,31 +117,28 @@ li.menu-item>a{
     line-height: 1.7;
     }
 
-li.menu-item>a.logo{
+li.logo>a{
     max-height: 3rem;
     overflow: visible;
     position: relative;
     padding: 0;
     margin-top: -2rem;
-    }
-
-a.logo>h1{
     color: inherit;
     }
 
-li.menu-item>a.forum{
+li#menu-item-27.menu-item-27>a{
     border: 1px solid #B8976A;
     padding: 0.4rem 0.8rem;
     position: relative;
     }
 
-li.menu-item>a.forum:hover{
+li#menu-item-27.menu-item-27>a:hover{
     background: #fff;
     color: #B8976A ;
     text-decoration: none;
-    }
+    }    
 
-li.menu-item>a>i{
+li.menu-item>a>span>i{
     font-size: 1rem;
     }
 
